# Rrogram

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/get_envs/: Cargo.toml
crates/get_envs/src/: get_home.rs  get_rrogram_home.rs  lib.rs
crates/menu/: Cargo.toml
crates/menu/src/: get_content.rs  input_menu.rs  lib.rs  main_menu.rs
crates/starter/: Cargo.toml
crates/starter/src/: continue_project.rs  lib.rs  manage_project.rs  new_project.rs  project.rs
