[workspace]
members = [
  "crates/app", "crates/args", "crates/get_envs",
  "crates/menu",
  "crates/starter",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = {
  version = "0.3.22",
  features = ["env-filter"]
}
tracing-appender = "0.2.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
