[package]
name = "rrogram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
args = { path = "../args" }
menu = { path = "../menu" }
starter = { path = "../starter" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
get_envs = { path = "../get_envs" }
color-eyre = { workspace = true }
tracing-appender = { workspace = true }
