[package]
name = "starter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
json = "0.12.4"
tracing = { workspace = true }
menu = { path = "../menu" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre.workspace = true
tracing-appender = { workspace = true }
